# signals

./: ATTRIBUTE-FIXPOINT-SPEC.md  CMakeLists.txt  README.md  TYPE-ATTRIBUTE-SPEC.md
Dependencies/: DependenciesAudit.cpp  DependenciesGraph.cpp  DependenciesPrinting.cpp  DependenciesUtils.cpp
DirectedGraph/: DirectedGraphAlgorythm.hh
FaustAlgebra/: FaustAlgebra.hh
interval/: check.cpp  check.hh  intervalExp.cpp  intervalMissing.cpp  intervalPow.cpp  intervalRemainder.cpp  intervalRsh.cpp  intervalXor.cpp  interval_algebra.hh  interval_def.hh  utils.hh
signals/: binop.cpp  bottom-up-attributes.hh  clkEnvInference.cpp  clkEnvInference.hh  fbc_opcode.hh  interval.hh  occurrences.cpp  ppsig.cpp  prim2.cpp  prim2.hh  recursiveness.cpp  recursivness.cpp  sharing.cpp  shlysis.cpp  sigCoreTypeAlgebra.cpp  sigCoreTypeAlgebra.hh  sigFIR.cpp  sigFold.cpp  sigFold.hh  sigIIR.cpp  sigOpcode.cpp  sigOpcode.hh  sigScalarize.cpp  sigScalarize.hh  sigTypeAlgebra.cpp  sigTypeAlgebra.hh  signals.cpp  signals.hh  sigorderrules.cpp  sigprint.cpp  sigs-config.cpp  sigs-config.hh  sigs-export.hh  sigs-state.cpp  sigs-state.hh  sigtype.cpp  sigtyperules.cpp  sigtyperules.hh  sigvisitor.cpp  sigvisitor.hh  (+2 more)
tests/: tests.cpp
